# Strategy

./: CMakeLists.txt
_client/: CMakeLists.txt
_server/: CMakeLists.txt
data/: templates.json
sources/client/: main.cpp
sources/game/: entity.cpp  entity.h  entityfactory.cpp  entityfactory.h  entitysystem.cpp  entitysystem.h  gamelevel.cpp  gamelevel.h  inputmanager.cpp  inputmanager.h
sources/game/actions/: actions.cpp  actions.h
sources/game/components/: gamecomponent.cpp  gamecomponent.h
sources/game/systems/: gamesystem.cpp  gamesystem.h
